# HelloCV

./: CMakeLists.txt  LICENSE  README.md  Starsky语雀链接.txt  package.xml  安装OpenCV 4.5.x.md  安装ROS2（在WSL中）.md  配置VSCode.md
src/: Crypto.cpp  Crypto.h  FileHandler.cpp  FileHandler.h  Menu.cpp  Menu.h  crypto_main.cpp  hello_cv_node.cpp
